--- a/about/about_company.html
+++ b/about/about_company.html
@@ -23,7 +23,7 @@
             <nav class="navbar navbar-expand-lg custom-nav bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html#home">
-                        <img src="/img/logo.png" alt="Logo Ceva.id">
+                        <img src="../img/logo.png" alt="Logo Ceva.id">
                         <span>Ceva Trans</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
