--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-md-4 col-lg-3 mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title"><img src="/img/facility/suspention.png" alt=""></h5>
+                                <h5 class="card-title"><img src="img/facility/suspention.png" alt=""></h5>
                             </div>
                         </div>
                     </div>
